crates/easyofd/tests/compile_fail/derive_tuple.rs
use easyofd::OfdModel;

#[derive(OfdModel)]
struct TupleStruct(String, i32);

fn main() {}
